# visual_perception

./: CMakeLists.txt  configDoxy  out_camera_data.yml  visual_perception.kdev4
include/: frame_grabber.h  pose_estimate.h  utils.h  visual_module.h
left_eye/: config.ini
right_eye/: config.ini
src/: frame_grabber.cpp  main.cpp  pose_estimate.cpp  visual_module.cpp
